# BlendeX

./: .gitignore  .mcp.json  README.md  pyproject.toml
.codex-plugin/: plugin.json
blender_addon/blendex/: __init__.py  batches.py  capabilities.py  executor.py  history.py  logs.py  safety.py  scene.py  server.py  state.py  ui.py
codex_plugin/: __init__.py
codex_plugin/blendex_mcp/: benchmark.py  blender_client.py  catalog.py  effect_model.py  graph_ir.py  graph_planner.py  graph_recipe.py  graph_repair.py  graph_validation.py  node_schema.py  node_semantics.py  planner.py  recipes.py  server.py  tools.py  version.py  workflow.py
docs/: demo-prompts.md  readiness-audit-v0.4.md  readiness-audit-v0.5.md
docs/benchmarks/: v0-5-heldout-prompts.json
scripts/: mcp_probe.py  package_blender_addon.py  run_blender_smoke.py  run_release_checks.sh  run_unit_tests.sh
src/blendex_protocol/: __init__.py  errors.py  messages.py  validation.py
tests/blender_addon/: test_addon_import.py  test_auth.py  test_batches.py  test_capabilities_fake.py  test_capabilities_v2.py  test_executor_fake.py  test_history.py  test_safety.py  test_scene.py  test_server_dispatch.py  test_state.py  test_ui.py
tests/codex_plugin/: test_advanced_geometry_nodes.py  test_benchmark.py  test_blender_client.py  test_effect_model.py  test_graph_ir.py  test_graph_planner.py  test_graph_recipe.py  test_graph_repair.py  test_graph_validation.py  test_node_schema.py  test_node_semantics.py  test_packaging.py  test_planner.py  test_readiness.py  test_recipes.py  test_server.py  test_smoke_docs.py  (+5 more)
(+13 files in other folders)
