[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "blendex"
version = "0.2.0"
description = "CodeX to Blender Geometry Nodes bridge"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["blendex_protocol*", "codex_plugin*"]
